# sushi

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md
assets/: frag.glsl  player.blend  player.iqm  vert.glsl
ext/glad/include/glad/: glad.h
src/sushi/: attrib_location.hpp  common.hpp  event.hpp  framebuffer.cpp  framebuffer.hpp  framebuffer_cubemap.cpp  framebuffer_cubemap.hpp  gl.hpp  iqm.cpp  iqm.hpp  key_array.hpp  mesh.cpp  mesh.hpp  mesh_builder.cpp  mesh_builder.hpp  mesh_group.cpp  mesh_group.hpp  mesh_utils.hpp  obj_loader.cpp  obj_loader.hpp  pose.cpp  pose.hpp  shader.cpp  shader.hpp  skeleton.cpp  skeleton.hpp  sushi.hpp  texture.cpp  texture.hpp  transform.cpp  transform.hpp  window.cpp  window.hpp
test/: main.cpp
